--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "./js/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "concurrently \"npm:server\" \"npm:serve\"",
+    "start": "concurrently \"npm:server\" \"npm:serve\" \"npm:json-server\"",
     "server": "nodemon server.js",
-    "serve": "browser-sync start --config bs-config.js"
+    "serve": "browser-sync start --config bs-config.js",
+    "json-server": "json-server --watch db.json --port 3001"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,7 @@
   "dependencies": {
     "browser-sync": "^3.0.2",
     "concurrently": "^8.2.2",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "nodemon": "^3.1.0"
   }
